// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CodeReadingView > renders code snippet 1`] = `
<div>
  <div>
     
    <div>
      コード読解
    </div>
     
    <pre>
      console.log(1+1);
    </pre>
     
  </div>
</div>
`;

exports[`CodeReadingView > renders with answer 1`] = `
<div>
  <div>
     
    <div>
      コード読解
    </div>
     
    <pre>
      Answer: 2
    </pre>
     
  </div>
</div>
`;
